--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -61,6 +61,7 @@
         android:textColor="@color/white"
         android:background="@drawable/custumbuttons"/>
 
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,7 +69,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="26dp"
         android:layout_marginBottom="19dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal">x
 
         <TextView
             android:layout_width="wrap_content"
