--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alegreya_sc_bold</item>
+        <item>@font/chewy</item>
         <item>@font/pacifico</item>
     </array>
 </resources>
