--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:id="@+id/drawer_layout"
     android:background="@drawable/main_visiblity"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    >
 
 
     <RelativeLayout
@@ -20,7 +20,7 @@
         <include
             android:id="@+id/main_page_toolbar"
             layout="@layout/app_bar_layout"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_width="match_parent">
         </include>
 
@@ -242,12 +242,14 @@
     </RelativeLayout>
 
     <android.support.design.widget.NavigationView
+        android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_marginBottom="3dp"
         app:menu="@menu/navigation_menu"
-        android:id="@+id/navigation_view">
+        android:id="@+id/navigation_view"
+        android:background="@drawable/image_visiblity">
 
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
