--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,13 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="MenuStyle" parent="Theme.AppCompat.Light">
-        <item name="android:background">@color/white</item>
-    </style>
-
-    <style name="Custom_Dialog" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:windowMinWidthMajor">90%</item>
-        <item name="android:windowMinWidthMinor">90%</item>
+    <style name="NavTextSize" parent="Theme.AppCompat.Light">
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
