gui update ver:1.0.3

--- a/app/src/main/res/layout/activity_home_year.xml
+++ b/app/src/main/res/layout/activity_home_year.xml
@@ -225,12 +225,14 @@
         </FrameLayout>
     </RelativeLayout>
     <android.support.design.widget.NavigationView
+        android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:layout_marginBottom="3dp"
         app:menu="@menu/navigation_menu"
-        android:id="@+id/navigation_view">
+        android:id="@+id/navigation_view"
+        android:background="@drawable/image_visiblity">
 
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
