--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,6 +105,7 @@
                                 </android.support.v7.widget.CardView>
 
                                 <android.support.v7.widget.CardView
+                                    android:id="@+id/ppt"
                                     android:clickable="true"
                                     android:layout_width="125dp"
                                     android:layout_height="125dp"
@@ -127,6 +128,7 @@
 
 
                                 <android.support.v7.widget.CardView
+                                    android:id="@+id/videolectures"
                                     android:clickable="true"
                                     android:layout_width="125dp"
                                     android:layout_height="125dp"
@@ -161,6 +163,7 @@
                                 android:orientation="horizontal">
 
                                 <android.support.v7.widget.CardView
+                                    android:id="@+id/blogs"
                                     android:clickable="true"
                                     android:layout_width="195dp"
                                     android:layout_height="195dp"
@@ -180,6 +183,7 @@
                                 </android.support.v7.widget.CardView>
 
                                 <android.support.v7.widget.CardView
+                                    android:id="@+id/questions"
                                     android:clickable="true"
                                     android:layout_width="195dp"
                                     android:layout_height="195dp"
@@ -211,6 +215,7 @@
                                 android:orientation="horizontal">
 
                                 <android.support.v7.widget.CardView
+                                    android:id="@+id/feedbacks"
                                     android:clickable="true"
                                     android:layout_width="393dp"
                                     android:layout_height="140dp"
