--- a/app/src/main/res/layout/activity_power_point.xml
+++ b/app/src/main/res/layout/activity_power_point.xml
@@ -17,7 +17,7 @@
         <include
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:id="@+id/home_page_toolbar"
+            android:id="@+id/PowerPoint_page_toolbar"
             layout="@layout/app_bar_layout">
         </include>
 
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/home_page_toolbar">
+            android:layout_below="@+id/PowerPoint_page_toolbar">
 
             <LinearLayout
                 android:layout_width="match_parent"
