--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -68,8 +68,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="26dp"
-        android:layout_marginBottom="19dp"
-        android:orientation="horizontal">x
+        android:layout_marginBottom="59dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -90,6 +90,27 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="26dp"
+        android:layout_marginEnd="26dp"
+        android:gravity="center"
+        android:layout_marginBottom="19dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/continueAsTeacher"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/alegreya"
+            android:text="Continue as Teacher."
+            android:textColor="@color/red"
+            android:textSize="19sp" />
     </LinearLayout>
 
 </RelativeLayout>
