--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -37,7 +37,7 @@
                 android:layout_gravity="center"/>
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="400dp"
             android:layout_height="120dp"
             android:layout_alignParentTop="true"
@@ -94,7 +94,7 @@
                         android:textColor="#8c6c04"/>
                 </LinearLayout>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </RelativeLayout>
 
     <LinearLayout
