--- a/app/src/main/res/layout/activity_fifth.xml
+++ b/app/src/main/res/layout/activity_fifth.xml
@@ -21,7 +21,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -62,9 +62,9 @@
                         android:text="All about Processor and Chip-sets"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -100,7 +100,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -109,7 +109,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -150,9 +150,9 @@
                         android:text="All about Applied Mathematics"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -188,11 +188,11 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="190dp"
             android:layout_height="260dp"
             android:layout_margin="10dp"
@@ -229,7 +229,7 @@
                     android:padding="5dp"
                     android:textColor="#000000"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 
 </ScrollView>
