--- a/app/src/main/res/layout/activity_fourth.xml
+++ b/app/src/main/res/layout/activity_fourth.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -66,9 +66,9 @@
 
                 </LinearLayout>
 
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -105,7 +105,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -114,7 +114,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -155,9 +155,9 @@
                         android:text="All about Applied Mathematics"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -193,11 +193,11 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="190dp"
             android:layout_height="260dp"
             android:layout_margin="10dp"
@@ -234,7 +234,7 @@
                     android:padding="5dp"
                     android:textColor="#000000"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
