--- a/app/src/main/res/layout/activity_home_year.xml
+++ b/app/src/main/res/layout/activity_home_year.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -48,7 +48,7 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -68,9 +68,9 @@
                                     android:src="@drawable/firstsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -90,7 +90,7 @@
                                     android:src="@drawable/secondsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
                     <LinearLayout
@@ -104,7 +104,7 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -124,9 +124,9 @@
                                     android:src="@drawable/thirdsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -146,7 +146,7 @@
                                     android:src="@drawable/forthsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
                     <LinearLayout
@@ -160,7 +160,7 @@
                         android:gravity="center"
                         android:orientation="horizontal">
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -180,9 +180,9 @@
                                     android:src="@drawable/fifthsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
 
-                        <android.support.v7.widget.CardView
+                        <androidx.cardview.widget.CardView
                             android:layout_width="160dp"
                             android:layout_height="100dp"
                             android:layout_margin="10dp"
@@ -202,7 +202,7 @@
                                     android:src="@drawable/sixthsemlogo" />
 
                             </LinearLayout>
-                        </android.support.v7.widget.CardView>
+                        </androidx.cardview.widget.CardView>
                     </LinearLayout>
 
                     <TextView
@@ -224,7 +224,7 @@
             </LinearLayout>
         </FrameLayout>
     </RelativeLayout>
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -234,5 +234,5 @@
         android:id="@+id/navigation_view"
         android:background="@drawable/image_visiblity">
 
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
