--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,8 +8,7 @@
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
     android:background="@drawable/main_visiblity"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
 
 
     <RelativeLayout
@@ -85,7 +84,7 @@
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/syllabus"
                                     android:clickable="true"
                                     android:layout_width="260dp"
@@ -102,9 +101,9 @@
                                     </ImageView>
 
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/ppt"
                                     android:clickable="true"
                                     android:layout_width="125dp"
@@ -124,10 +123,10 @@
                                     </ImageView>
 
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/videolectures"
                                     android:clickable="true"
                                     android:layout_width="125dp"
@@ -146,9 +145,8 @@
                                         android:layout_gravity="center">
 
                                     </ImageView>
+                                </androidx.cardview.widget.CardView>
 
-
-                                </android.support.v7.widget.CardView>
                             </LinearLayout>
 
                             <LinearLayout
@@ -162,7 +160,7 @@
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/blogs"
                                     android:clickable="true"
                                     android:layout_width="195dp"
@@ -180,9 +178,9 @@
 
                                     </ImageView>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/questions"
                                     android:clickable="true"
                                     android:layout_width="195dp"
@@ -200,7 +198,7 @@
 
                                     </ImageView>
 
-                                </android.support.v7.widget.CardView>
+                                </androidx.cardview.widget.CardView>
                             </LinearLayout>
 
                             <LinearLayout
@@ -214,7 +212,7 @@
                                 android:gravity="center"
                                 android:orientation="horizontal">
 
-                                <android.support.v7.widget.CardView
+                                <androidx.cardview.widget.CardView
                                     android:id="@+id/feedbacks"
                                     android:clickable="true"
                                     android:layout_width="393dp"
@@ -232,20 +230,16 @@
                                     </ImageView>
 
 
-                                </android.support.v7.widget.CardView>
-
-
+                                </androidx.cardview.widget.CardView>
                             </LinearLayout>
-
                         </LinearLayout>
-
                     </RelativeLayout>
                 </LinearLayout>
             </ScrollView>
         </FrameLayout>
     </RelativeLayout>
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -255,5 +249,5 @@
         android:id="@+id/navigation_view"
         android:background="@drawable/image_visiblity">
 
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
