--- a/app/src/main/res/layout/activity_my_query.xml
+++ b/app/src/main/res/layout/activity_my_query.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
         android:textSize="20sp"/>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_below="@id/top_text"
         android:id="@+id/all_stud_query_listSelf"
         android:layout_width="match_parent"
