--- a/app/src/main/res/layout/activity_sixth_semester.xml
+++ b/app/src/main/res/layout/activity_sixth_semester.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -63,9 +63,9 @@
                         android:text="All about Processor and Chip-sets"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -101,7 +101,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -110,7 +110,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -151,9 +151,9 @@
                         android:text="All about Applied Mathematics"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -189,7 +189,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -197,7 +197,7 @@
             android:gravity="center"
             android:clipToPadding="false"
             android:orientation="horizontal">
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="160dp"
             android:layout_height="260dp"
             android:layout_margin="10dp"
@@ -234,8 +234,8 @@
                     android:padding="5dp"
                     android:textColor="#000000"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
-            <android.support.v7.widget.CardView
+        </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -272,7 +272,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
@@ -280,7 +280,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -321,9 +321,9 @@
                         android:text="All about Processor and Chip-sets"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -359,7 +359,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
 
