--- a/app/src/main/res/layout/activity_teacher_main.xml
+++ b/app/src/main/res/layout/activity_teacher_main.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdvanceJava">
+    tools:context=".AsTeacher.TeacherMainActivity">
 
-    <com.github.barteksc.pdfviewer.PDFView
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/adv_java_pdfview"/>
+        android:layout_height="wrap_content"
+        android:text="Teacher Main Page"
+        android:gravity="center"
+        android:textSize="22sp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
