--- a/app/src/main/res/layout/activity_third_semester.xml
+++ b/app/src/main/res/layout/activity_third_semester.xml
@@ -22,7 +22,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -63,9 +63,9 @@
                         android:text="All about Processor and Chip-sets"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -101,7 +101,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
         <LinearLayout
@@ -110,7 +110,7 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -151,9 +151,9 @@
                         android:text="All about Applied Mathematics"
                         android:textColor="#000000" />
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="260dp"
                 android:layout_margin="10dp"
@@ -189,7 +189,7 @@
                         android:padding="5dp"
                         android:textColor="#000000"/>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     <LinearLayout
@@ -198,7 +198,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="160dp"
             android:layout_height="260dp"
             android:layout_margin="10dp"
@@ -239,11 +239,11 @@
                     android:text="All about Applied Mathematics"
                     android:textColor="#000000" />
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
 
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
             android:layout_width="160dp"
             android:layout_height="260dp"
             android:layout_margin="10dp"
@@ -280,7 +280,7 @@
                     android:padding="5dp"
                     android:textColor="#000000"/>
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
     </LinearLayout>
 
