--- a/app/src/main/res/layout/activity_video_lectures.xml
+++ b/app/src/main/res/layout/activity_video_lectures.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -42,7 +42,7 @@
             </LinearLayout>
         </FrameLayout>
     </RelativeLayout>
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:theme="@style/NavTextSize"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -52,5 +52,5 @@
         android:id="@+id/navigation_view"
         android:background="@drawable/image_visiblity">
 
-    </android.support.design.widget.NavigationView>
-</android.support.v4.widget.DrawerLayout>
+    </com.google.android.material.navigation.NavigationView>
+</androidx.drawerlayout.widget.DrawerLayout>
