--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -88,7 +88,7 @@
             android:textSize="16sp" />
 
     </LinearLayout>
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="400dp"
         android:layout_height="85dp"
         android:layout_alignParentTop="true"
@@ -174,7 +174,7 @@
                     android:textColor="#8c6c04"/>
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
