--- a/app/src/main/res/layout/activity_home_year.xml
+++ b/app/src/main/res/layout/activity_home_year.xml
@@ -48,8 +48,7 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/semesterbackground">
+                        android:layout_height="match_parent">
 
                     </ImageView>
 
@@ -95,8 +94,7 @@
 
                     <ImageView
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/back5">
+                        android:layout_height="match_parent">
 
                     </ImageView>
 
@@ -144,8 +142,7 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/back6">
+                            android:layout_height="match_parent">
 
                         </ImageView>
 
@@ -191,8 +188,7 @@
 
                             <ImageView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:src="@drawable/back10">
+                                android:layout_height="match_parent">
 
                             </ImageView>
 
@@ -242,8 +238,7 @@
 
                         <ImageView
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:src="@drawable/semesterbackground">
+                            android:layout_height="match_parent">
 
                         </ImageView>
 
@@ -257,7 +252,6 @@
                             android:textStyle="bold"
                             android:layout_marginStart="10dp"
                             android:layout_marginTop="118dp">
-
                         </TextView>
 
                         <TextView
@@ -268,9 +262,7 @@
                             android:textSize="80sp"
                             android:layout_marginStart="212dp"
                             android:layout_marginTop="90dp">
-
                         </TextView>
-
                     </androidx.cardview.widget.CardView>
 
                     <LinearLayout
@@ -289,12 +281,8 @@
 
                             <ImageView
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:src="@drawable/back5">
-
+                                android:layout_height="match_parent">
                             </ImageView>
-
-
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -304,9 +292,7 @@
                                 android:textSize="40sp"
                                 android:textStyle="bold"
                                 android:layout_marginStart="90dp"
-                                android:layout_marginTop="120dp"
-                                >
-
+                                android:layout_marginTop="120dp">
                             </TextView>
 
                             <TextView
@@ -317,28 +303,14 @@
                                 android:textSize="80sp"
                                 android:layout_marginStart="280dp"
                                 android:layout_marginTop="88dp">
-
                             </TextView>
-
                         </androidx.cardview.widget.CardView>
                     </LinearLayout>
-
-
                 </LinearLayout>
-
-
             </LinearLayout>
-
-
-
-
         </ScrollView>
 
-
-
 </LinearLayout>
-
-
     </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
