--- a/app/src/main/res/layout/activity_blogs.xml
+++ b/app/src/main/res/layout/activity_blogs.xml
@@ -28,18 +28,10 @@
             android:layout_alignParentStart="true"
             android:layout_below="@+id/blog_page_toolbar">
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/blogRecView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-
-                </RelativeLayout>
-            </LinearLayout>
+                android:layout_height="match_parent"/>
         </FrameLayout>
     </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
