--- a/app/src/main/res/layout/blog_read_layout.xml
+++ b/app/src/main/res/layout/blog_read_layout.xml
@@ -16,22 +16,32 @@
         android:padding="5dp">
 
         <TextView
-            android:id="@+id/blog_title"
+            android:id="@+id/blogRead_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
-            android:hint="Blog here..."
+            android:hint="Blog Title here..."
             android:textStyle="bold"
             android:textSize="20sp"
             android:padding="2dp"
             android:textColor="@color/orange"
             android:layout_marginStart="2dp"/>
 
+        <TextView
+            android:id="@+id/blogRead_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textMultiLine"
+            android:hint="Blog here..."
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:padding="2dp"
+            android:layout_marginStart="2dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
-            android:padding="5dp"
+            android:padding="2dp"
             android:orientation="horizontal">
 
         <!--<de.hdodenhof.circleimageview.CircleImageView
@@ -54,7 +64,7 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/blogpost_username"
+                        android:id="@+id/blogpostRead_username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="UserName"
@@ -82,7 +92,7 @@
                     android:padding="2dp">
 
                     <TextView
-                        android:id="@+id/post_subject"
+                        android:id="@+id/postRead_subject"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint=" Subject"
@@ -91,7 +101,7 @@
                         android:textColor="#000000" />
 
                     <TextView
-                        android:id="@+id/blogpost_date"
+                        android:id="@+id/blogpostRead_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint=" Date"
@@ -100,7 +110,7 @@
                         android:textColor="#000000" />
 
                     <TextView
-                        android:id="@+id/blogpost_time"
+                        android:id="@+id/blogpostRead_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint=" Time"
